--- a/index.html
+++ b/index.html
@@ -6,29 +6,67 @@
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   </head>
   <body>
+    <section class="camera-list">
+      <ul id="cameras"></ul>
+    </section>
     <video id="preview"></video>
     <ul id="scannedText"></ul>
     <script type="text/javascript">
-      let scanner = new Instascan.Scanner({ video: document.getElementById('preview'),/* continuous: false*/ });
+      const $cameras = document.getElementById('cameras');
+      const $scannedText = document.getElementById('scannedText');
+      const $preview = document.getElementById('preview');
+      let CAMERAS = [];
+
+      let scanner = new Instascan.Scanner({ video: $preview,/* continuous: false*/ });
       scanner.addListener('scan', function (content) {
         console.log(content);
         scanOutput(content);
       });
+
       Instascan.Camera.getCameras().then(function (cameras) {
-        if (cameras.length > 0) {
-          scanner.start(cameras[0]);
-        } else {
+        if (cameras.length === 0) {
           console.error('No cameras found.');
+          return;
         }
+        
+        cameras.forEach( el => addCameraToList(el) );
+        //console.log(cameras);
+        CAMERAS = cameras;
+        //scanner.start(cameras[0]);
+        
       }).catch(function (e) {
         console.error(e);
       });
 
+      $cameras.addEventListener('click', testCameraClick);
+
+      function testCameraClick(event) {
+        /*scanner.stop().then( function() {
+
+        } );*/
+        //console.log(event.target);
+        let activeCamera = CAMERAS.find( el => el.id === event.target.id );
+        //console.log(activeCamera);
+        scanner.start(activeCamera);
+      }
+
+      function addCameraToList (el) {
+        let a = document.createElement("a");
+        //let list = document.getElementById("cameras");
+        let newItem = document.createElement("li");
+
+        a.textContent = el.name;
+        a.setAttribute('id', el.id);
+        a.setAttribute('href', "#");
+        newItem.appendChild(a);
+        $cameras.appendChild(newItem);
+      }
+
       function scanOutput(content) {
-        let list = document.getElementById('scannedText');
+        //let list = document.getElementById('scannedText');
         let li = document.createElement('li');
         li.appendChild(document.createTextNode(content));
-        list.appendChild(li);
+        $scannedText.appendChild(li);
       }
     </script>
   </body>
