--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Instascan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
   </head>
@@ -38,21 +39,15 @@
         console.error(e);
       });
 
-      $cameras.addEventListener('click', testCameraClick);
+      $cameras.addEventListener('click', scannerStart);
 
-      function testCameraClick(event) {
-        /*scanner.stop().then( function() {
-
-        } );*/
-        //console.log(event.target);
+      function scannerStart(event) {
         let activeCamera = CAMERAS.find( el => el.id === event.target.id );
-        //console.log(activeCamera);
         scanner.start(activeCamera);
       }
 
       function addCameraToList (el) {
         let a = document.createElement("a");
-        //let list = document.getElementById("cameras");
         let newItem = document.createElement("li");
 
         a.textContent = el.name;
@@ -63,7 +58,6 @@
       }
 
       function scanOutput(content) {
-        //let list = document.getElementById('scannedText');
         let li = document.createElement('li');
         li.appendChild(document.createTextNode(content));
         $scannedText.appendChild(li);
